--- a/virtualBeacon_front/public/index.html
+++ b/virtualBeacon_front/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Virtual beacon"
-      content="n-vibe"
+      name="Personal beacon"
+      content="wip"
     />
 
     <link
